[1.548] update link to faq/pf/ftp.html - faq/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -221,7 +221,7 @@ XXX  -->
   <ul>
   <li><a href="pf/logging.html"                              >Создание и анализ log-файлов (протоколирование)</a>
   <li><a href="pf/perf.html"                                 >Производительность</a>
-  <li><a href="https://www.openbsd.org/faq/pf/ftp.html"      >Проблемы с FTP</a>
+  <li><a href="pf/ftp.html"                                  >Проблемы с FTP</a>
   <li><a href="https://www.openbsd.org/faq/pf/authpf.html"   >Оболочка для аутентификации пользователей на шлюзах (authpf)</a>
   <li><a href="pf/carp.html"                                 >Создание резервной группы хостов Firewall'а при помощи CARP и pfsync</a>
   </ul>
