[1.90] update link to faq/pf/ftp.html - faq/pf/index.html

--- a/faq/pf/index.html
+++ b/faq/pf/index.html
@@ -39,7 +39,7 @@ PF: Пакетный фильтр OpenBSD
 	<ul>
 	<li><a href="logging.html"                             >Создание и анализ log-файлов (протоколирование)</a>
 	<li><a href="perf.html"                                >Производительность</a>
-	<li><a href="https://openbsd.org/faq/pf/ftp.html"      >Проблемы с FTP</a>
+	<li><a href="ftp.html"                                 >Проблемы с FTP</a>
 	<li><a href="https://openbsd.org/faq/pf/authpf.html"   >Оболочка для аутентификации пользователей на шлюзах (authpf)</a>
 	<li><a href="carp.html"                                >Создание резервной группы хостов Firewall'а при помощи CARP и pfsync</a>
 	</ul>
