faq13: commented out the list

--- a/faq/faq13.html
+++ b/faq/faq13.html
@@ -7,6 +7,7 @@
 
 <title>OpenBSD FAQ: Мультимедиа</title>
 <meta charset=utf-8>
+<link rel="icon" type="image/x-icon" href="../favicon.ico"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../openbsd.css">
 <link rel="canonical" href="https://www.openbsd.org/faq/faq13.html">
@@ -36,12 +37,15 @@ FAQ - Мультимедиа
 <ul>
   <li><a href="#confaudio"  >Конфигурирование аудио устройств</a>
   <li><a href="#playaudio"  >Проигрывание различных форматов аудио</a>
+  <!-- XXX
   <li><a href="#playCD"     >Проигрывание аудио CD</a>
+  XXX -->
   <li><a href="#recordaudio">Запись аудио-сэмплов</a>
   <li><a href="#recordmon"  >Recording a Monitor Mix of All Audio Playback</a>
   <li><a href="#audioserver">Аудио-сервер OpenBSD (sndiod)</a>
   <li><a href="#audioprob"  >Отладка проблем со звуком</a>
   <li><a href="#midi"       >Использование MIDI инструментов</a>
+  <!-- XXX
   <li><a href="#playDVD"    >Проигрывание DVD</a>
   <li><a href="#burnCD"     >Запись CD и DVD</a>
 <ul>
@@ -50,6 +54,7 @@ FAQ - Мультимедиа
   <li><a href="#writeDVD"   >Запись DVD</a>
 </ul>
   <li><a href="#plugins"    >Плагины для браузера (Java и Flash)</a>
+  XXX -->
 </ul>
 <hr>
 
