[1.638] sync, adding link to 7.0 - errata.html

--- a/errata.html
+++ b/errata.html
@@ -80,4 +80,5 @@
 <a href="https://www.openbsd.org/errata67.html">6.7</a>,
 <br>
 <a href="https://www.openbsd.org/errata68.html">6.8</a>,
-<a href="https://www.openbsd.org/errata69.html">6.9</a>.
+<a href="https://www.openbsd.org/errata69.html">6.9</a>,
+<a href="https://www.openbsd.org/errata70.html">7.0</a>.
