--- a/rpki-client/index.html
+++ b/rpki-client/index.html
@@ -39,8 +39,8 @@
 
 <p id="callout">
 
-<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-7.2.txt">rpki-client 7.2</a>
-вышел 28 июля 2021 года.
+<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-7.3.txt">rpki-client 7.3</a>
+вышел 23 сентября 2021 года.
 
 <p>
 <a href="https://man.openbsd.org/rpki-client">rpki-client</a>
