--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Портированная версия rpki-client 7.2 вышла 28 июля 2021 года.
+Портированная версия rpki-client 7.3 вышла 23 сентября 2021 года.
 
 <p>
 Портированная версия rpki-client работает и на нескольких других UNIX системах,
@@ -32,12 +32,18 @@
 этих безопасных и простых API.
 
 <p>
+rpki-client работат на всех операционных системах, где есть библиотека libcrypto,
+основанная на OpenSSL 1.1 или LibreSSL 3.3, и библиотека libtls, совместимая
+с LibreSSL 3.3 или более новой.
+
+<p>
 На момент написания портированная версия rpki-client собиралась и работала на
 следующих системах: 
 
 <ul>
 	<li>OpenBSD
-	<li>Linux (Alpine 3.12, Debian 9, Debian 10, Fedora 31, Fedora 32, Fedora 33, RHEL/CentOS 7, RHEL/CentOS 8)
+    <li>FreeBSD
+	<li>Linux (Alpine, CentOS, Debian, Fedora, Red Hat, Rocky, Ubuntu)
 	<li>macOS
 	<li>Windows Subsystem for Linux 2
 </ul>
