--- a/openbgpd/ftp.html
+++ b/openbgpd/ftp.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Релиз портированной версии OpenBGPD 7.1 состоялся 25 июня 2021 года.
+Релиз портированной версии OpenBGPD 7.2 состоялся 23 сентября 2021 года.
 
 <p>
 Портированная OpenBGPD - это версия/порт для других операционных систем.
@@ -29,7 +29,6 @@
 
 <p>
 Портированная версия OpenBGPD собирается и работет на следующих платформах:
-
 
 <ul>
 	<li>OpenBSD
