[1.357] sync, OpenSSH 8.8 release - openssh/index.html

--- a/openssh/index.html
+++ b/openssh/index.html
@@ -54,8 +54,8 @@
 </h2>
  
 <p id="callout">
-Релиз <a href="https://www.openbsd.org/openssh/txt/release-8.7">OpenSSH 8.7</a>
-состоялся 20 августа 2021 года.<br>
+Релиз <a href="https://www.openbsd.org/openssh/txt/release-8.8">OpenSSH 8.8</a>
+состоялся 26 сентября 2021 года.<br>
 
 <p>
 OpenSSH это основной инструмент для создания соединений
