--- a/openssh/openbsd.html
+++ b/openssh/openbsd.html
@@ -36,6 +36,25 @@ h3 {
 Нижеперечисленные версии OpenSSH можно использовать в OpenBSD:
 
 <ul>
+<li><h3>OpenSSH 8.8: 26 сентября 2021</h3>
+
+<p>
+<a href="https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/openssh-8.8.tar.gz">
+https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/openssh-8.8.tar.gz</a>
+
+<pre>
+# cd /usr/src/usr.bin
+# tar zxvf .../openssh-8.8.tar.gz
+# cd ssh
+# make obj
+# make cleandir
+# make depend
+# make
+# make install
+# cp ssh_config sshd_config /etc/ssh # (optional)
+</pre>
+и перезапустите sshd.
+
 <li><h3>OpenSSH 8.7: 20 августа 2021</h3>
 
 <p>
