--- a/openssh/security.html
+++ b/openssh/security.html
@@ -32,6 +32,29 @@ OpenSSH разрабатывается по тем же принципам и т
 <a href="../security.html">безопасности OpenBSD</a>.
 
 <ul>
+<li><p><b>September 26, 2021</b><br>
+    sshd в OpenSSH версиях между 6.2 и 8.7 (включительно).
+    <br>
+	sshd(8) failed to correctly initialise supplemental groups when
+	executing an <tt>AuthorizedKeysCommand</tt> or
+	<tt>AuthorizedPrincipalsCommand</tt>, where a
+	<tt>AuthorizedKeysCommandUser</tt> or
+	<tt>AuthorizedPrincipalsCommandUser</tt> directive was been set to
+	run the command as a non-root user. Instead these commands would inherit
+	the groups that sshd(8) was started with.
+    <br>
+	Depending on system configuration, inherited groups may allow
+	the helper programs to gain unintended privilege.
+    <br>
+	Neither <tt>AuthorizedKeysCommand</tt> nor
+	<tt>AuthorizedPrincipalsCommand</tt> are enabled by default in
+	sshd_config(5).
+    <br>
+	Этот баг был исправлен в OpenSSH 8.8.
+    <br>
+    Более подробную информацю можно найти в
+    <a href="https://www.openssh.com/txt/release-8.8">release notes</a>.
+
 <li><p><b>3 марта 2021</b><br>
     ssh-agent в OpenSSH версиях между 8.2 и 8.4 (включительно).
     <br>
